# firm-server

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
firm_server/: adapters.py  cli.py  config.py  exceptions.py  routes.py  server.py  store.py  utils.py
firm_server/cli/: __init__.py  actor.py  main.py  resource.py  serve.py
firm_server/html/: endpoint.py
firm_server/html/static/css/: styles.css
firm_server/html/static/js/: dark-mode.js
firm_server/html/templates/: actor.jinja2  document.jinja2  home.jinja2  layout.jinja2  login.jinja2
firm_server/html/tenants/firm.technoetic.com/templates/: home.jinja2
firm_server/schemas/: activities-schema.json  base-activity-schema.json  create-schema.json  object-schema.json
tests/: test_server.py
